bday and florida

--- a/_posts/2018-06-07-florida.md
+++ b/_posts/2018-06-07-florida.md
@@ -14,12 +14,14 @@ At the end of May we spent **10 days in Gainesville, Florida**, Joe's hometown a
 
 <a href="/img/florida/0000_20180520_110620.JPG"> <img border="0" src= "/img/florida/0000_20180520_110620.JPG" width="200"></a>
 
-We flew from Barcelona on a direct flight to Miami and there we took a rental car to Gainesville. The trip when great! Counting how hard it could have been with a baby, a toddler and a great grandma (yes, we took my grandma with us!!) It was pretty much uneventful! About a year ago I wrote some ideas and tips about traveling with kids on my post <a href="http://familyonthego.life/flying-with-toddler/" target="_blank">"Flying wiht a toddler"</a>, if you are interested!
+We flew from Barcelona on a direct flight to Miami and there we took a rental car to Gainesville. The trip went great! Concidering how hard it could have been with a baby, a toddler and a great grandma (yes, we took my grandma with us!!) it was pretty much uneventful! About a year ago I wrote some ideas and tips about traveling with kids on my post <a href="http://familyonthego.life/flying-with-toddler/" target="_blank">"Flying with a toddler"</a>, if you are interested!
 
 While we were there Galileo turned 4 months and Ramona turned 3 years old! All Joe's siblings were there, and we got to meet the new baby of the family, Lucy, and they got to meet Galileo. It was such a good time to hang out with family, meet up with old friends, and catch up on life!
 
 
 <a href="/img/florida/0000_20180521_094842.JPG"> <img border="0" src= "/img/florida/0000_20180521_094842.JPG" width="200"></a>
+
+We did a lot of hanging out at Mimi's house (Joe's mom), at Pop Pop's (Joe's dad), at the Airbnb we shared with Joe's siblings, meeting up with old friends from when we lived in Gainesville and basically spending quality time with the people we love but we don't see that often!! And here are a bunch af random pictures...
 
 <a href="/img/florida/0000_20180521_085526.JPG"> <img border="0" src= "/img/florida/0000_20180521_085526.JPG" width="200"></a>
 
@@ -31,23 +33,19 @@ While we were there Galileo turned 4 months and Ramona turned 3 years old! All J
 
 <a href="/img/florida/0000_20180524_094719.JPG"> <img border="0" src= "/img/florida/0000_20180524_094719.JPG" width="200"></a>
 
-Both great grandmas admiring Galileo and trying to capture those especial moments to share with her friends back home! 
-<a href="/img/florida/0000_20180527_101348.JPG"> <img border="0" src= "/img/florida/0000_20180527_101348.JPG" width="200"></a>
+<a href="/img/florida/0000_20180527_101348.JPG"> <img border="0" src= "/img/florida/0000_20180527_101348.JPG" width="200"></a>Both great grandmas admiring Galileo and trying to capture those special moments to share with their  friends back home! 
 
-<a href="/img/florida/0000_20180523_183204.JPG"> <img border="0" src= "/img/florida/0000_20180523_183204.JPG" width="200"></a>
+<a href="/img/florida/0000_20180523_183204.JPG"> <img border="0" src= "/img/florida/0000_20180523_183204.JPG" width="200"></a> The farmers' market, a classic on Wednesday evening!
 
 <a href="/img/florida/0000_20180524_095752.JPG"> <img border="0" src= "/img/florida/0000_20180524_095752.JPG" width="200"></a>
 
 <a href="/img/florida/0000_20180522_110933.JPG"> <img border="0" src= "/img/florida/0000_20180522_110933.JPG" width="200"></a>
 
-<a href="/img/florida/0000_20180526_204245.JPG"> <img border="0" src= "/img/florida/0000_20180526_204245.JPG" width="200"></a>
+<a href="/img/florida/0000_20180526_204245.JPG"> <img border="0" src= "/img/florida/0000_20180526_204245.JPG" width="200"></a> Double sink bath for the win!
 
 <a href="/img/florida/0000_20180522_164718.JPG"> <img border="0" src= "/img/florida/0000_20180522_164718.JPG" width="200"></a>
 
-
-
-
-<a href="/img/florida/0000_IMG_2060.JPG"> <img border="0" src= "/img/florida/0000_IMG_2060.JPG" width="200"></a>
+<a href="/img/florida/0000_IMG_2060.JPG"> <img border="0" src= "/img/florida/0000_IMG_2060.JPG" width="200"></a> Mimi's pancakes, always so good!!!!
 
 <a href="/img/florida/0000_IMG_2077.JPG"> <img border="0" src= "/img/florida/0000_IMG_2077.JPG" width="200"></a>
 
@@ -57,27 +55,37 @@ Both great grandmas admiring Galileo and trying to capture those especial moment
 
 <a href="/img/florida/0000_IMG_2156.JPG"> <img border="0" src= "/img/florida/0000_IMG_2156.JPG" width="200"></a>
 
-<a href="/img/florida/0000_IMG_2184.JPG"> <img border="0" src= "/img/florida/0000_IMG_2184.JPG" width="200"></a>
-
-<a href="/img/florida/0000_IMG_2201.JPG"> <img border="0" src= " vimg/florida/0000_IMG_2201.JPG" width="200"></a>
+<a href="/img/florida/0000_IMG_2184.JPG"> <img border="0" src= "/img/florida/0000_IMG_2184.JPG" width="200"></a> This photo that Arthur took with the camera of Ramona trying to take a picture, love it!
 
 <a href="/img/florida/0000_IMG_2226.JPG"> <img border="0" src= "/img/florida/0000_IMG_2226.JPG" width="200"></a>
 
+Mimi's popsicles were a big hit too!!
+
 <a href="/img/florida/0000_IMG_2227.JPG"> <img border="0" src= "/img/florida/0000_IMG_2227.JPG" width="200"></a>
 
+<a href="/img/florida/0000_IMG_2201.JPG"> <img border="0" src= "/img/florida/0000_IMG_2201.JPG" width="200"></a>
+
 <a href="/img/florida/0000_IMG_2257.JPG"> <img border="0" src= "/img/florida/0000_IMG_2257.JPG" width="200"></a>
+
+Babies, babies, babies everyhere !!!!
 
 <a href="/img/florida/0000_IMG_2312.JPG"> <img border="0" src= "/img/florida/0000_IMG_2312.JPG" width="200"></a>
 
 <a href="/img/florida/0000_IMG_2343.JPG"> <img border="0" src= "/img/florida/0000_IMG_2343.JPG" width="200"></a>
 
+Galileo loves the water as much as his big sister, I think!
+
 <a href="/img/florida/0000_IMG_2347.JPG"> <img border="0" src= "/img/florida/0000_IMG_2347.JPG" width="200"></a>
 
 <a href="/img/florida/0000_IMG_2361.JPG"> <img border="0" src= "/img/florida/0000_IMG_2361.JPG" width="200"></a>
 
+And that tongue out, all day!
+
 <a href="/img/florida/0000_IMG_2374.JPG"> <img border="0" src= "/img/florida/0000_IMG_2374.JPG" width="200"></a>
 
 <a href="/img/florida/0000_IMG_2385.JPG"> <img border="0" src= "/img/florida/0000_IMG_2385.JPG" width="200"></a>
+
+I really wanted to go **blueberry picking** while in Gainesville because the last time I went (and only time, actually) was when I was super pregnant with Ramona, in May 2015, and I liked the idea of going with her this time! The season was almost over but Kelli found a farm that let us pick the last blueberries. It was hot, and there were only few blueberries left but it was a perfect activity to do with 2 toddlers (we left the babies at home ;-)).
 
 <a href="/img/florida/0000_IMG_2386.JPG"> <img border="0" src= "/img/florida/0000_IMG_2386.JPG" width="200"></a>
 
@@ -85,24 +93,32 @@ Both great grandmas admiring Galileo and trying to capture those especial moment
 
 <a href="/img/florida/0000_IMG_2397.JPG"> <img border="0" src= "/img/florida/0000_IMG_2397.JPG" width="200"></a>
 
-<a href="/img/florida/0000_IMG_2409.JPG"> <img border="0" src= "/img/florida/0000_IMG_2409.JPG" width="200"></a>
+<a href="/img/florida/0000_IMG_2409.JPG"> <img border="0" src= "/img/florida/0000_IMG_2409.JPG" width="200"></a> I think more blueberries went in their mouths than in the buckets... ;-)
 
 <a href="/img/florida/0000_IMG_2411.JPG"> <img border="0" src= "/img/florida/0000_IMG_2411.JPG" width="200"></a>
+  *****
+<a href="/img/florida/DSCF6505.JPG"> <img border="0" src= "/img/florida/DSCF6505.JPG" width="200"></a> Photo from May 2015, with Ramona in my belly !!
 
 <a href="/img/florida/0000_IMG_2414.JPG"> <img border="0" src= "/img/florida/0000_IMG_2414.JPG" width="200"></a>
 
+Galileo is such a happy and easy going baby, he went from arm to arm meeting everyone with a big smile !!
 <a href="/img/florida/0000_IMG_2497.JPG"> <img border="0" src= "/img/florida/0000_IMG_2497.JPG" width="200"></a>
 
 <a href="/img/florida/0000_IMG_2499.JPG"> <img border="0" src= "/img/florida/0000_IMG_2499.JPG" width="200"></a>
 
-
-<a href="/img/florida/0000_IMG_2798.JPG"> <img border="0" src= "/img/florida/0000_IMG_2798.JPG" width="200"></a>
-
 <a href="/img/florida/0000_IMG_2819.JPG"> <img border="0" src= "/img/florida/0000_IMG_2819.JPG" width="200"></a>
+
+**The memorial for Joe's grandpa**, that passed away in January, was for sure the most emotional moment of the trip. We are so glad we got to be there with his family and be able to say goodbye to this honorable man, after whom we gave Galileo's middle name, Eric.
+
+<a href="/img/florida/IMG_2844.JPG"> <img border="0" src= "/img/florida/IMG_2844.JPG" width="200"></a>
+
 
 <a href="/img/florida/0000_IMG_2878.JPG"> <img border="0" src= "/img/florida/0000_IMG_2878.JPG" width="200"></a>
 
-<a href="/img/florida/0000_IMG_2894.JPG"> <img border="0" src= "/img/florida/0000_IMG_2894.JPG" width="200"></a>
+
+And the morning at **Blue Springs State Park**, I think, was my favorite!! I love that place, the beautiful color of the clear and cold water, the nature around, so magical! We got there really early because the forecast predicted tropical rains later in the day and it worked out perfectly! Even if it was not very hot that morning we got to swim and play with the water. Galileo was happy sitting in the water, and I even jumped from the deck, which I am always afraid of but afterwards so glad I did! 
+
+<a href="/img/florida/0000_IMG_2894.JPG"> <img border="0" src= "/img/florida/0000_IMG_2894.JPG" width="200"></a> Ramona was wondering why she needed to were a bathing suit, after swimming naked all week ;-P
 
 <a href="/img/florida/0000_IMG_2895.JPG"> <img border="0" src= "/img/florida/0000_IMG_2895.JPG" width="200"></a>
 
@@ -126,12 +142,16 @@ Both great grandmas admiring Galileo and trying to capture those especial moment
 
 <a href="/img/florida/0000_IMG_3076.JPG"> <img border="0" src= "/img/florida/0000_IMG_3076.JPG" width="200"></a>
 
-<a href="/img/florida/0000_IMG_3086.JPG"> <img border="0" src= "/img/florida/0000_IMG_3086.JPG" width="200"></a>
+<a href="/img/florida/0000_IMG_3086.JPG"> <img border="0" src= "/img/florida/0000_IMG_3086.JPG" width="200"></a> Napping anywhere! 
 
 <a href="/img/florida/0000_IMG_3089.JPG"> <img border="0" src= "/img/florida/0000_IMG_3089.JPG" width="200"></a>
 
-<a href="/img/florida/0000_IMG_3108.JPG"> <img border="0" src= "/img/florida/0000_IMG_3108.JPG" width="200"></a>
+It was a great trip, all of us had a lot of fun and we are so glad we could make it and share all those great moments with the best company!
 
+Here is a short video with some of the best moments of the trip! 
+I hope you enjoy it !!
+
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/S4DXJj4IQHA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
 
