--- a/_posts/2017-04-28-data.md
+++ b/_posts/2017-04-28-data.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Mozambican data"
 date: 2017-04-28
-author: Joe Brew
+author: Joe 
 backgrounds:
     - /img/mozambique/IMG_5957.jpg
 thumb: /img/mozambique/IMG_9949.JPG
