--- a/_posts/2018-10-11-life-scq.md
+++ b/_posts/2018-10-11-life-scq.md
@@ -12,13 +12,13 @@ comments: true
 
 <a href="/img/lifescq/0000_20180926_085438.JPG"> <img border="0" src= "/img/lifescq/0000_20180926_085438.JPG" width="200"></a>
 
-It has been almost a month since Ramona started school after a long summer break. She started at the big kids school (how she calls it!) mid September. So **our family rhythm** has switch from a late and relaxed summer shcedule, that included a lot of time outside, specially in the evenings, late bed times and slow breakfasts, to a more structured and early rhythm. So, here is **what ur day to day looks like now**. (Very different too from our normal day in Mozambique 2 years ago! Have a look <a href="http://familyonthego.life/life/">here</a>)
+It has been almost a month since Ramona started school after a long summer break. She started at the big kids school (how she calls it!) mid September. So **our family rhythm** has switch from a late and relaxed summer schedule, that included a lot of time outside, specially in the evenings, late bed times and slow breakfasts, to a more structured and early rhythm. So, here is **what our day to day looks like now**. (Very different too from our normal day in Mozambique 2 years ago! Have a look <a href="http://familyonthego.life/life/">here</a>)
  
 
 
 <a href="/img/lifescq/0000_20181008_085202.JPG"> <img border="0" src= "/img/lifescq/0000_20181008_085202.JPG" width="200"></a>
 
-**We wake up at 8 in the morning**, if not earlier. Ramona sleeps trough the night in her own room, but Galileo still wakes up multiple times during the night so he is still in our room. We have **breakfast** together, alternating oatmeal, cereal and homemade granola, with fruit, yougurt or milk. Then I pack Ramona's snack for school, we get dress and out of the door by 8:50 to **drop of Ramona at school**. Joe works from home most of the time but somedays he has to go to Barcelona, then he leaves at 6 am and comes back around 5 pm. 
+**We wake up at 8 in the morning**, the latest. Ramona sleeps trough the night in her own room, but Galileo still wakes up multiple times during the night so he is still in our room. We have **breakfast** together, alternating oatmeal, cereal and homemade granola, with fruit, yougurt or milk. Then I pack Ramona's snack for school, we get dressed and out of the door by 8:50 to **drop off Ramona at school**. Joe works from home most of the time but somedays he has to go to Barcelona, then he leaves at 6 am and comes back around 5 pm. 
 
 <a href="/img/lifescq/0000_20181005_075557.JPG"> <img border="0" src= "/img/lifescq/0000_20181005_075557.JPG" width="200"></a>
 
@@ -30,7 +30,7 @@ It has been almost a month since Ramona started school after a long summer break
 
 <a href="/img/lifescq/0000_20180921_093047.JPG"> <img border="0" src= "/img/lifescq/0000_20180921_093047.JPG" width="200"></a>
 
-On Mondays I go to the **market** to buy fruits and vegetables for the week, some olives and a roasted chicken that we eat for lunch. On Tuesdays and Thursdays I take a **fitness class**. Galileo comes with me and plays on a mat in a corner while I sweat and get strong! On Wednesdays and Fridays I try to catch up on **laundry and housework** stuff. Mid morming Galileo takes a nap. At 12 we pick up Ramona from school, which is a 5 minutes walk from home. The idea is that Ramona will stay at school for lunch and nap 2 days a week, but we are still working on it.
+On Mondays I go to the **market** to buy fruits and vegetables for the week, some olives and a roasted chicken that we eat for lunch. On Tuesdays and Thursdays I take a **fitness class**. Galileo comes with me and plays on a mat in a corner while I sweat and get strong! On Wednesdays and Fridays I try to catch up on **laundry and housework** stuff. Mid morning Galileo takes a nap. At 12 we pick up Ramona from school, which is a 5 minutes walk from home. The idea is that Ramona will stay at school for lunch and nap 2 days a week, but we are still working on it.
 
 <a href="/img/lifescq/0000_20181004_150624.JPG"> <img border="0" src= "/img/lifescq/0000_20181004_150624.JPG" width="200"></a>
 
@@ -45,9 +45,9 @@ I go back home and **while Galileo naps** I work on whaterver I am working at th
 
 <a href="/img/lifescq/0000_20180924_175637.JPG"> <img border="0" src= "/img/lifescq/0000_20180924_175637.JPG" width="200"></a>
 
-Around 6:30-7 pm (it's getting earlier by the day now because afternoons are getting shorter and it's getting colder outside) we go home. I prepare dinner. Ramona either helps me in the kitchen or has some free play time. We eat dinner together at around 8 pm. Right after dinner starts the **bed time routine**: bath, teeth, pjs, stories and bed time. Galileo and Ramona take a bath togheter. Then I take one and Joe takes the other to dry and put pjs on. I breastfeed Galileo to sleep and Joe tells 1,000 stories to Ramona and helps her fall asleep. 
+Around 6:30 (it's getting earlier by the day now because afternoons are getting shorter and it's getting colder outside) we go home. I prepare dinner. Ramona either helps me in the kitchen or has some free play time. We eat dinner together at around 7:30-8 pm. Right after dinner starts the **bed time routine**: bath, teeth, pjs, stories and bed time. Galileo and Ramona take a bath togheter. Then I take one kid and Joe takes the other to dry and put pjs on. I breastfeed Galileo to sleep and Joe tells 1,000 stories to Ramona and helps her fall asleep. 
 
-Both kids are normaly asleep by 9-9:30. Then we clean the dinner mess and we have some **quite time for us**. We either finnish some work, watch a tv show or talk and plan our lifes!
+Both kids are normaly asleep by 9-9:30. Then we clean the dinner mess and we have some **quiet time for us**. We either finish some work, watch a tv show or talk and plan our lives!
 
 <a href="/img/lifescq/20181010_112843.jpg"> <img border="0" src= "/img/lifescq/20181010_112843.jpg" width="200"></a>
 
@@ -69,16 +69,15 @@ Is yours very different to ours?
 I also want to share a list of activities I have in mind to do during this season:
 
 
-**Fall bucket list activities**
+**Fall bucket list activities**:
 
 - Mushroom hunting
-- Chestnuts picking
-- Nature walk with busket for colecting treasures
+- Chestnut picking
+- Nature walk with basket for colecting treasures
 - Create a fall nature table 
 - Knit hats for the kids
 - Bake something together
-- Make play dough
-- Watch a movie + pop corn under the blakets
+- Watch a movie + pop corn under the blankets
 - Bake panellets (see how to make those <a href="http://familyonthego.life/fall/">here</a> )
 - Bake apple crumble pie
 - Make Mimi's coconut curry pumpkin soup
